# blocklistmetrics

./: .gitignore  README.md  README.rst  blm.py  pyproject.toml  run_blocklistmetrics_cron_job.sh
Docs/: blm-db-schema.mermaid  ztzt-ip-blacklost-arch-2025-01-02-0815.excalidraw
blocklistmetrics/: ingest.py  loader.py  parser.py
config/: blocklist_urls.json  bm_config.json  cron_blm.json
tests/: conftest.py  test_parser.py
tests/data/: AbuseIPDB_blacklist  abuse.ch_sslbl-botnet  emergingthreats_fwrules  nixspam_spam  spamhaus.org_DROPList-spam  stamparm_ipsum
