[tool.poetry]
name = "blocklistmetrics"
version = "0.1.0"
description = ""
authors = ["Armin Wasicek <armin.wasicek@avast.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = ">=2.28.1"
certifi = "^2022.6.15"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
